--- a/package.json
+++ b/package.json
@@ -43,80 +43,39 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.56.0",
-    "@apollo/federation": "^0.38.1",
-    "@apollo/gateway": "^2.11.2",
-    "@apollo/server": "^4.12.2",
-    "@apollo/server-plugin-response-cache": "^4.1.4",
-    "@apollo/subgraph": "^2.11.2",
     "@coral-xyz/anchor": "^0.29.0",
-    "@graphql-tools/merge": "^9.0.24",
-    "@graphql-tools/schema": "^10.0.23",
     "@orao-network/solana-vrf": "^0.6.1",
-    "@sentry/node": "^7.86.0",
+    "@sentry/integrations": "^7.114.0",
+    "@sentry/node": "^9.40.0",
     "@sentry/profiling-node": "^9.40.0",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.87.6",
-    "@types/morgan": "^1.9.10",
-    "@types/qrcode": "^1.5.5",
-    "axios": "^1.10.0",
-    "bcrypt": "^5.1.1",
+    "axios": "^1.11.0",
     "bs58": "^5.0.0",
-    "bull": "^4.11.5",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "envalid": "^8.1.0",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
-    "express-validator": "^7.2.1",
-    "futil-js": "^1.76.2",
-    "graphql": "^16.11.0",
-    "graphql-subscriptions": "^3.0.0",
-    "graphql-tag": "^2.12.6",
-    "helmet": "^7.1.0",
-    "https-proxy-agent": "^7.0.6",
-    "inquirer-select-with-state": "^0.1.3",
-    "joi": "^17.11.0",
-    "jsonwebtoken": "^9.0.2",
-    "lodash": "^4.17.21",
-    "morgan": "^1.10.1",
+    "ioredis": "^5.6.1",
     "node-telegram-bot-api": "^0.66.0",
-    "ora": "^8.2.0",
     "pg": "^8.11.3",
-    "prom-client": "^15.0.0",
     "qrcode": "^1.5.4",
     "redis": "^4.6.11",
-    "socket.io": "^4.6.0",
-    "socket.io-client": "^4.6.0",
     "telegraf": "^4.15.3",
     "tweetnacl": "^1.0.3",
     "uuid": "^9.0.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@apollo/datasource-rest": "^6.4.1",
-    "@types/bcrypt": "^5.0.2",
     "@types/bs58": "^4.0.1",
-    "@types/bull": "^4.10.0",
-    "@types/chai": "^5.2.2",
-    "@types/compression": "^1.7.5",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.8",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.0",
     "@types/pg": "^8.10.9",
-    "@types/supertest": "^6.0.3",
+    "@types/qrcode": "^1.5.5",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "chai": "^4.3.10",
     "eslint": "^8.54.0",
     "jest": "^29.7.0",
-    "mocha": "^10.2.0",
     "prettier": "^3.1.0",
-    "supertest": "^7.1.4",
     "ts-jest": "^29.1.1",
     "tsx": "^4.20.3",
     "typescript": "^5.3.0"
