feat: Update bot token in .env.example and add commands.txt for BotFather
- Updated production bot token to 8235123805:AAGdgnG6igVeODZjMuGH41cQMYfwqfsyO7U
- Created commands.txt with all bot commands for easy BotFather configuration
- Bot is now ready for deployment with the new token

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Bot Configuration
-BOT_TOKEN=your-telegram-bot-token-for-production
+BOT_TOKEN=8235123805:AAGdgnG6igVeODZjMuGH41cQMYfwqfsyO7U
 BOT_TOKEN_DEV=your-development-bot-token
 ENVIRONMENT=development
 
